--- a/src/css/EmailForm.css
+++ b/src/css/EmailForm.css
@@ -7,3 +7,99 @@ input,
 textarea {
   margin: 10px 0px;
 }
+
+
+.form-container {
+    height: 100vh;
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+}
+
+.form-background {
+    background: linear-gradient(#cfe9f2, #fff7f9);
+}
+
+.form-left {
+    display: flex;
+    flex-direction: column;
+    align-items: start;
+    gap: 20px;
+}
+
+.form-title {
+    font-weight: 600;
+    color: #2596be;
+    font-size: 40px;
+    margin-bottom: 5px;
+
+}
+
+.form-hr {
+    border: none;
+    width: 120px;
+    height: 5px;
+    background-color: #2596be;
+    border-radius: 10px;
+    margin-bottom: 20px;
+}
+
+.form-input {
+    width: 400px;
+    height: 50px;
+    border: none;
+    outline: none;
+    padding-left: 25px;
+    font-weight: 500;
+    color: #666;
+    border-radius: 50px;
+}
+
+.form-left textarea {
+    height: 140px;
+    padding-top: 15px;
+    border-radius: 20px;
+}
+
+.form-input:focus {
+    border: 2px solid #ED9455;
+}
+
+.form-input::placeholder {
+    color: #a9a9a9;
+}
+
+.form-left button {
+    display: flex;
+    align-items: center;
+    padding: 15px 30px;
+    font-size: 16px;
+    color: #fff;
+    gap: 10px;
+    border: none;
+    border-radius: 50px;
+    background: linear-gradient(270deg, #7ac4dc, #2596be);
+    cursor: pointer;
+}
+
+.form-left button img {
+    height: 15px;
+}
+
+.form-right {
+    width: 500px;
+}
+
+.form-notice {
+    text-align: justify;
+    color: #606060;
+}
+
+@media (max-width: 800px) {
+    .form-input {
+        width: 80vw;
+    }
+    .form-right {
+        display: none;
+    }
+}
