--- a/src/css/index.css
+++ b/src/css/index.css
@@ -1,4 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins&family=Monoton:wght@200;300;400;500;600;700;800&display=swap');
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 
 * {
     margin: 0;
@@ -13,8 +16,3 @@
 .sidebar {
     color: #fff;
 }
-
-
-
-
-
